# xing-grpc

./: .gitignore  Cargo.toml  LICENSE  README.md
doc/: 메모.txt
src/: main.rs  msg_window.rs  type_sync_rust.bat  xing_api.rs
src/backend/: backend.rs  consts.rs  mod.rs  msg_window.rs  types.rs  xing_api.rs
src/common/: consts.rs  mod.rs  types.rs
